{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 2952,
  "lineage": "d6bd5780-60b9-2934-8eba-907dcb227d78",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b71c3c72ecaf9e03",
            "arn": "arn:aws:ec2:ap-southeast-2:398045402467:elastic-ip/eipalloc-0b71c3c72ecaf9e03",
            "association_id": "eipassoc-017ad167db8927844",
            "domain": "vpc",
            "id": "eipalloc-0b71c3c72ecaf9e03",
            "instance": "i-0d4dbca0283b4d38a",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-06a86835ac87edc9b",
            "private_dns": "ip-10-0-71-57.ap-southeast-2.compute.internal",
            "private_ip": "10.0.71.57",
            "public_dns": "ec2-52-62-191-15.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.62.191.15",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "go-micro-jenkins-eip"
            },
            "tags_all": {
              "Name": "go-micro-jenkins-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.jenkins_profile",
            "aws_iam_role.jenkins_role",
            "aws_instance.jenkins",
            "aws_key_pair.jenkins_key",
            "aws_security_group.jenkins_sg",
            "aws_subnet.public_zone1",
            "aws_vpc.main",
            "data.aws_ami.ami",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.jenkins_assume_role",
            "tls_private_key.jenkins_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9ecbb59c9657524",
            "arn": "arn:aws:ec2:ap-southeast-2:398045402467:elastic-ip/eipalloc-0c9ecbb59c9657524",
            "domain": "vpc",
            "id": "eipalloc-0c9ecbb59c9657524",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-52-64-77-180.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.64.77.180",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "staging-nat"
            },
            "tags_all": {
              "Name": "staging-nat"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0eeab253db7e765a9",
            "arn": "arn:aws:ec2:ap-southeast-2:398045402467:instance/i-0d4dbca0283b4d38a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "go-micro-jenkins-profile",
            "id": "i-0d4dbca0283b4d38a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "go-micro-jenkins-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06a86835ac87edc9b"
              }
            ],
            "primary_network_interface_id": "eni-06a86835ac87edc9b",
            "private_dns": "ip-10-0-71-57.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.71.57",
            "public_dns": "ec2-15-134-134-90.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "15.134.134.90",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-2:398045402467:key/2d6506a8-5435-4967-8c6d-b4ad419e6b9b",
                "throughput": 125,
                "volume_id": "vol-0c5bb8048b9733a83",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002213ebc5f665fbd",
            "tags": {
              "Name": "go-micro-jenkins",
              "Type": "Jenkins"
            },
            "tags_all": {
              "Name": "go-micro-jenkins",
              "Type": "Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041fb4874efe1ec6e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "398045402467",
            "id": "i-0d4dbca0283b4d38a",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins_profile",
            "aws_iam_role.jenkins_role",
            "aws_key_pair.jenkins_key",
            "aws_security_group.jenkins_sg",
            "aws_subnet.public_zone1",
            "aws_vpc.main",
            "data.aws_ami.ami",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.jenkins_assume_role",
            "tls_private_key.jenkins_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:398045402467:internet-gateway/igw-0c7298c1b0405587d",
            "id": "igw-0c7298c1b0405587d",
            "owner_id": "398045402467",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "staging-igw"
            },
            "tags_all": {
              "Name": "staging-igw"
            },
            "vpc_id": "vpc-0cb7f86917c9f71b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9ecbb59c9657524",
            "association_id": "eipassoc-040ed3143f982bca7",
            "connectivity_type": "public",
            "id": "nat-0bbefc06c3d280aa3",
            "network_interface_id": "eni-0332078d2a504398b",
            "private_ip": "10.0.80.156",
            "public_ip": "52.64.77.180",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-002213ebc5f665fbd",
            "tags": {
              "Name": "staging-nat"
            },
            "tags_all": {
              "Name": "staging-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:398045402467:route-table/rtb-021ee424295ef9001",
            "id": "rtb-021ee424295ef9001",
            "owner_id": "398045402467",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bbefc06c3d280aa3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-private"
            },
            "tags_all": {
              "Name": "staging-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb7f86917c9f71b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "398045402467",
            "id": "rtb-021ee424295ef9001",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:398045402467:route-table/rtb-0ef45f36c291301bb",
            "id": "rtb-0ef45f36c291301bb",
            "owner_id": "398045402467",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7298c1b0405587d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-public"
            },
            "tags_all": {
              "Name": "staging-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb7f86917c9f71b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "398045402467",
            "id": "rtb-0ef45f36c291301bb",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3e01d1a37182d7d",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-021ee424295ef9001",
            "subnet_id": "subnet-04571f9a5cc0011c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone1",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05983fbf80b041c50",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-021ee424295ef9001",
            "subnet_id": "subnet-0e03bbe09de295782"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone2",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c0f53fc5eb4b846",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0ef45f36c291301bb",
            "subnet_id": "subnet-002213ebc5f665fbd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0143c87f592998d18",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0ef45f36c291301bb",
            "subnet_id": "subnet-072c10a3c62353419"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:398045402467:security-group/sg-041fb4874efe1ec6e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041fb4874efe1ec6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "go-micro-jenkins-20251029125051592900000001",
            "name_prefix": "go-micro-jenkins-",
            "owner_id": "398045402467",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "go-micro-jenkins-sg"
            },
            "tags_all": {
              "Name": "go-micro-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb7f86917c9f71b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "398045402467",
            "id": "sg-041fb4874efe1ec6e",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:398045402467:subnet/subnet-04571f9a5cc0011c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04571f9a5cc0011c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398045402467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "staging-private-ap-southeast-2a",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging-private-ap-southeast-2a",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cb7f86917c9f71b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "398045402467",
            "id": "subnet-04571f9a5cc0011c2",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:398045402467:subnet/subnet-0e03bbe09de295782",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e03bbe09de295782",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398045402467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "staging-private-ap-southeast-2b",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging-private-ap-southeast-2b",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cb7f86917c9f71b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "398045402467",
            "id": "subnet-0e03bbe09de295782",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:398045402467:subnet/subnet-002213ebc5f665fbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002213ebc5f665fbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "398045402467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "staging-public-ap-southeast-2a",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging-public-ap-southeast-2a",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cb7f86917c9f71b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "398045402467",
            "id": "subnet-002213ebc5f665fbd",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:398045402467:subnet/subnet-072c10a3c62353419",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072c10a3c62353419",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "398045402467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "staging-public-ap-southeast-2b",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging-public-ap-southeast-2b",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cb7f86917c9f71b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "398045402467",
            "id": "subnet-072c10a3c62353419",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:398045402467:vpc/vpc-0cb7f86917c9f71b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0389c59a8dc802c40",
            "default_route_table_id": "rtb-0b1682880af12f683",
            "default_security_group_id": "sg-0a61a85541dbebe34",
            "dhcp_options_id": "dopt-0ff2c404de9fee20a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb7f86917c9f71b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b1682880af12f683",
            "owner_id": "398045402467",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "staging-main"
            },
            "tags_all": {
              "Name": "staging-main"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "398045402467",
            "id": "vpc-0cb7f86917c9f71b2",
            "region": "ap-southeast-2"
          }
        }
      ]
    }
  ]
}